styles.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');

* {
  box-sizing: border-box;
  user-select: none;
  overflow: hidden;
}

a {
  color: red;
}

body {
  margin: 0;
  padding: 0;
  height: 100vh;
  color: white;
  background: black;
  font-family: "Plus Jakarta Sans", sans-serif;
  text-transform: uppercase;
}

h1 {
  font-size: clamp(2rem, 2vw, 3rem);
  font-weight: 800;
  text-align: left;
  letter-spacing: 0.3em;
  color: black;
  width: 70%;
}


h2 {
  font-size: clamp(2rem, 2vw, 5rem);
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.5em;
  margin-right: -0.5em;
  color: hsl(0, 0, 80%);
  width: 90vw;
  max-width: 1000px;
  letter-spacing: -0.05rem
  z-index: 2;
}

header {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2% 2%;
  width: 100%;
  z-index: 3;
  height: 7em;
  font-family: "Plus Jakarta Sans", sans-serif;
  font-size: clamp(0.66rem, 2vw, 1rem);
  letter-spacing: 0.5em;
  opacity: 0;
  transition: opacity 0.5 ease out;
}

.header-img {
  height: 4rem; 
  width: 4rem; 
  background-image: url('/images/logo2.jpg'); 
  background-repeat: no-repeat;
  background-position: center;  
  background-size: cover;     
  border-radius: 50%;
  border: none;              
}

.logo-image {
  height: 4rem;
  max-height: 30vh;
  width: auto;
  object-fit: contain;
  border-radius: 50%
}

.fas-quote-left, .fas-quote-right {
  font-size: 1rem; 
  color: red;
}
#quote {
  color: black;
}

.scroll-indicator {
  position: absolute;
  bottom: 2rem; 
  left: 50%;
  transform: translateX(-50%);
  font-size: 3rem;
  color: white;
  animation: pulse 3.5s infinite;
}

@keyframes pulse {
  0% {
    transform: translateX(-50%) scale(1);
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    transform: translateX(-50%) scale(1.5);
    opacity: 0;
  }
}
section {
  height: 100vh;
  width: 100%;
  top: 0;
  position: fixed;
  visibility: hidden;
}

.big-video{
  position: absolute;
  /* top: 50%;
  left: 50%; */
  width: 100%;
  min-width: 180.77777778vh;
  pointer-events: none;
  min-height: 80%;
}

section .outer,
section .inner {
  width: 100%;
  height: 100%;
  overflow-y: hidden;
}

#header-2 {
  background-color: black;
  font-size: 1rem;
  position: absolute;
  left: 0;
  bottom: 10%;
}

section .bg {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  background-size: cover;
  background-position: center;
}

section .bg h2 {
  z-index: 3;
}


.first .bg {
  background-image: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.5) 0%,
      rgba(0, 0, 0, 0.1) 100%
    );
    background-color: black;
}

.second .bg {
  background-color: black;
  height: 100%;
}

.disney {
  color: red;
}
.video-background .content,
.content {
  position: relative;
  z-index: 2;
  color: white;
  padding: 20px;
  width: 30%;
  background-color: #FFF;
}

.third .bg {
  background-color: black;
  display: flex;
  flex-direction: column;
}

.fourth .bg {
  background-image: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0.3) 100%
    ),
    url("images/kush.png");
}


.fourth .bg {
  position: relative; 
  display: flex;
  flex-direction: column;
  align-items: center; 
  justify-content: space-evenly;
}
.fourth .section-header {
  font-size: clamp(1.5rem, 5vw, 2.5rem);
  background: black;
  font-weight: 300;
  z-index: 2;
  letter-spacing: 5px;
  width: fit-content;
}

.fourth .align {
  background: black;
  padding: 2rem;
  border-radius: 8px;
  width: 100%;
  max-width: 700px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 2;
  opacity: 0.9
}


.fourth .form {
  display: grid;
  gap: 1rem;
}

.fourth .form__input{
  box-border: none;
  background-color: grey; 
  color: black; 
  height: 3rem;
  width: 100%;
  font-size: 2rem;
}

.fourth .form textarea {
  height: 15rem;
}

.fourth .form__input::placeholder,
.fourth .form textarea::placeholder {
  color: black;
  font-family: "Plus Jakarta Sans", sans-serif;
  font-size: 2rem;
}

.fourth .form__field button {
  background-color: white; 
  color: black;
  border: none;
  cursor: pointer;
  width: 100%;
  height: 4rem;
  font-size: 3rem;
}
.fourth .form__input, .fourth .form textarea {
  background-color: grey;
  color: white;
  width: 100%;
  font-size: 2rem;
  padding: 0.5rem;
  border: none;
  font-family: "Plus Jakarta Sans", sans-serif;
}

.fourth .form__field button:hover {
  background-color: red;
  font-size: 3rem;
}
.error-message {
  color: #ff3860;
  font-size: 14px;
  margin-top: 5px;
}

.form__input.large-input {
  width: 100%;
  height: 5em; 

}

.hidden {
  display: none;
}

.logo-wrapper {
  position: relative;
}

.logo {
position: relative;
z-index: 2;
display: flex;
align-items: center;
justify-content: center;
}


.logo-image {
  height: 700px;
  opacity: 0.3;
}

.video-container {
  display: flex;
  /* justify-content: space-around; */
  align-items:center;
  justify-content: center;
  /* flex-wrap: wrap */
  /* background-color: white; */
  width: 100%;
  margin: 0 auto;
  /* transform: rotate(2deg); */

  padding: 1rem;
}


.video-container iframe {
  width: 20%;
  aspect-ratio: 16/9;
  margin: 3px;
  opacity: 0;
  animation: fadeIn 1s ease-out forwards; /* Animation applied to all iframes */
}

/* Animation Keyframes */
@keyframes slideIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.video-container iframe:nth-child(1) {
  animation-delay: 0.2s;  /* First iframe fades in after 0.2 seconds */
}

.video-container iframe:nth-child(2) {
  animation-delay: 0.4s;  /* Second iframe fades in after 0.4 seconds */
}

.video-container iframe:nth-child(3) {
  animation-delay: 0.6s;  /* Third iframe fades in after 0.6 seconds */
}

.video-container iframe:nth-child(4) {
  animation-delay: 0.8s;  /* Fourth iframe fades in after 0.8 seconds */
}

@media (max-width: 768px) {
  .video-container {
      flex-wrap: wrap;  
      justify-content: space-around;  
  }

  .video-container iframe {
      width: 30%; 
      margin-top: 2px;
      border: 1px solid black;
  }
}

@media screen and (max-width: 768px) {
  .section-header {
    font-size: 1rem;
    max-width: 100%
  }
}
.small-video {
  overflow: hidden;
}

